# candle-models

./: .gitignore  Cargo.toml  README.md  resnet18.py  resnet50.py
exports/: export_mobilenetv2.py  export_resnet18.py  export_resnet50.py  export_squeezenet.py
python/: mobilenetv2.py  resnet18.py  resnet50.py
src/: lib.rs  mobilenetv2.rs  resnet.rs  sequential.rs  squeezenet.rs
testdata/: mobilenetv2.txt  squeezenet1_0.txt  squeezenet1_1.txt
tests/: common.rs  imagenet.rs  mobilenetv2.rs  resnet.rs  squeezenet.rs
